# post-it

./: .gitignore  README.md  docker-compose.yml
rust/: Cargo.toml  Dockerfile
rust/src/: lib.rs  main.rs
rust/tests/: integration.rs
ts/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
ts/src/components/: Message.vue  MessageBoard.vue  SubmissionForm.vue
ts/src/service/: PostItService.ts
ts/src/views/: Home.vue
