[package]
name = "post_it"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "post_it"

[dependencies]
axum = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }
tower-http = { version = "0.1.2", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.70"
